# Mechanic

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  Acknowledgments.md  CMakeLists.txt  ChangeLog  Changelog.md  Developer-notes.md  Footer.html  GenerateContent.sh  Header.html  INSTALL  INSTALL.md  INSTALL.txt  INSTALL_ENV.md  LICENSE  LICENSE.md  LICENSE.txt  Makefile  Makefile.am  NEWS  Nav.html  Nav.php  Overview.md  README  README.md  README.txt  ROADMAP.md  TODO  config  configure.ac  functions.php  index.html  index.tpl.php  install.html  install.tpl.php  install_mechanic.sh  libreadconfig.c  libreadconfig.h  (+14 more)
doc/: Makefile.am  vimrc  (+7 more)
examples/: CMakeLists.txt  Makefile.example  README.md  UserGuide.md  mechanic_module_chpoollayout.c  mechanic_module_chpoollayout2.c  mechanic_module_createpool.c  mechanic_module_ex_attr.c  mechanic_module_ex_changepoollayout.c  mechanic_module_ex_changepoollayout2.c  mechanic_module_ex_createpool.c  mechanic_module_ex_datatypes.c  mechanic_module_ex_dim.c  mechanic_module_ex_dset.c  mechanic_module_ex_loop.c  mechanic_module_ex_mandelbrot.c  mechanic_module_ex_map.c  mechanic_module_ex_node.c  mechanic_module_ex_pool.c  mechanic_module_ex_prepareprocess.c  mechanic_module_ex_reset.c  mechanic_module_ex_setup.c  mechanic_module_map.c
examples/c/: Makefile.example  mechanic_module_ex_attr.c  mechanic_module_ex_changepoollayout.c  mechanic_module_ex_changepoollayout2.c  mechanic_module_ex_chreset.c  mechanic_module_ex_compound.c  mechanic_module_ex_compound_attr.c  mechanic_module_ex_createpool.c  mechanic_module_ex_datatypes.c  mechanic_module_ex_dim.c  mechanic_module_ex_dset.c  mechanic_module_ex_ga.c  mechanic_module_ex_loop.c  mechanic_module_ex_mandelbrot.c  mechanic_module_ex_mandelbrot.h  mechanic_module_ex_map.c  mechanic_module_ex_node.c  mechanic_module_ex_pool.c  mechanic_module_ex_poolmask.c  mechanic_module_ex_poolsetup.c  mechanic_module_ex_poolsetup2.c  mechanic_module_ex_poolsize.c  mechanic_module_ex_prepareprocess.c  mechanic_module_ex_readfile.c  mechanic_module_ex_readfile.h  mechanic_module_ex_readfile_setup.c  mechanic_module_ex_readfile_setup.h  mechanic_module_ex_reset.c  mechanic_module_ex_rngs.c  mechanic_module_ex_setup.c  mechanic_module_ex_stage.c  mechanic_module_ex_taskcheckpoint.c  readfile.txt
examples/fortran/: Makefile.example  mechanic_module_ex_ffc.c  mechanic_module_ex_ffc.h  mechanic_module_ex_ffc_fortran.F90  mechanic_module_ffc.c
examples/hello/: Makefile.am  README  Readme  Sample-Makefile  mechanic_module_hello.c  mpifarm_module_hello.c  mpifarm_module_hello.h
examples/modules/: CMakeLists.txt
examples/modules/arnold-web/: README.md  arnoldweb.cfg  mechanic_module_arnoldweb.c
examples/postprocess/: dynamical-map.gnu  h52png  map.py  mechanic_toolkit.py
src/: CMakeLists.txt  Makefile.am  config.h.in  derived.c  hdf5.c  main.c  master.c  mechanic  mechanic-internals.h  mechanic.c  mechanic.h  mechanic_config.h.in  module.c  module.h  mpifarm-internals.h  mpifarm.c  mpifarm.h  mpifarm_skel.c  mpifarm_skel.h  mpifarm_user.c  mpifarm_user.h  plugin.h  setup.c  slave.c  tools.c  tools.h  wscript_build
src/core/: CMakeLists.txt  M2Aprivate.c  M2Aprivate.h  M2Apublic.c  M2Apublic.h  M2Bprivate.c  M2Bprivate.h  M2CSprivate.c  M2CSprivate.h  M2Core.c  M2Core.h  M2Cprivate.c  M2Cprivate.h  M2Cpublic.c  M2Cpublic.h  M2Epublic.c  M2Epublic.h  M2Error.c  M2Error.h  M2Hpublic.c  M2Hpublic.h  M2Main.c  M2Main.h  M2Mpi.c  M2Mpi.h  M2Mpublic.c  M2Mpublic.h  M2Pool.c  M2Pool.h  M2Pprivate.c  M2Pprivate.h  M2Ppublic.c  M2Ppublic.h  M2Rprivate.c  M2Rprivate.h  M2Rpublic.c  M2Rpublic.h  M2Setup.c  M2Setup.h  M2Sprivate.c  (+63 more)
src/core/merror/: merror.c  merror.h
src/core/mtask/: mtask.c  mtask.h
src/engines/: Makefile.am  wscript  wscript_build
src/engines/gpu/: Makefile.am  mechanic_engine_gpu.c  mechanic_engine_gpu.h  wscript_build
src/engines/odex/: Makefile.am  mechanic_engine_odex.c  mechanic_engine_odex.h  wscript_build
src/fortran/: CMakeLists.txt  mechanic_fortran.F03  mechanic_fortran.F90  mechanic_fortran.f03  wscript_build
src/libs/: wscript_build
src/modes/: CMakeLists.txt  Makefile.am  wscript_build
src/modules/: CMakeLists.txt  Makefile.am  Wiki.md  mechanic_module_aweb.c  mechanic_module_aweb.h  mechanic_module_aweb_lib.c  mechanic_module_core.c  mechanic_module_core.h  mechanic_module_ga.c  mechanic_module_module.c  mechanic_module_module.h  mechanic_module_test.c  mechanic_module_test.h  mechanic_module_web.c  mechanic_module_web.h  mechanic_module_web_lib.c  wscript_build
src/plugins/: Makefile.am
src/python/: CMakeLists.txt  setup.py.in
src/readconfig/: Makefile.am  libreadconfig.c  libreadconfig.h  readconfig.c
tests/: CMakeLists.txt  generate-reference-tests.sh  test.cmake  tex_mandelbrot.cmake
tests/references/: core-master-00.h5  core-master-mode-master-00.h5  tex_attr-master-00.h5  tex_attr-master-mode-master-00.h5  tex_changepoollayout-master-00.h5  tex_changepoollayout-master-mode-master-00.h5  tex_changepoollayout2-master-00.h5  tex_changepoollayout2-master-mode-master-00.h5  tex_chreset-master-00.h5  tex_chreset-master-mode-master-00.h5  tex_compound-master-00.h5  tex_compound-master-mode-master-00.h5  tex_compound_attr-master-00.h5  tex_compound_attr-master-mode-master-00.h5  tex_createpool-master-00.h5  tex_createpool-master-mode-master-00.h5  tex_datatypes-master-00.h5  tex_datatypes-master-mode-master-00.h5  tex_dim-master-00.h5  tex_dim-master-mode-master-00.h5  tex_dset-master-00.h5  tex_dset-master-mode-master-00.h5  tex_ga-master-00.h5  tex_loop-master-00.h5  tex_loop-master-mode-master-00.h5  tex_mandelbrot-master-00.h5  tex_mandelbrot-master-mode-master-00.h5  tex_map-master-00.h5  tex_map-master-mode-master-00.h5  tex_mapc-master-00.h5  tex_node-master-00.h5  tex_node-master-mode-master-00.h5  tex_pool-master-00.h5  tex_pool-master-mode-master-00.h5  tex_poolmask-master-00.h5  tex_poolmask-master-mode-master-00.h5  tex_poolsetup-master-00.h5  tex_poolsetup-master-mode-master-00.h5  tex_poolsetup2-master-00.h5  tex_poolsetup2-master-mode-master-00.h5  (+17 more)
(+163 files in other folders)
