noinst_LIBRARIES = libmechanic_core.a
libmechanic_core_a_CFLAGS = -I. 
libmechanic_core_a_SOURCES = mechanic_core_setup.c \
							     mechanic_core_derived.c \
							     mechanic_core_hdf5.c \
							     mechanic_core_tools.c \
							     mechanic_core_checkpoint.c \
							     mechanic.h \
							     mechanic_internals.h
