noinst_LIBRARIES = libmechanic_mode_multifarm.a
libmechanic_mode_multifarm_a_SOURCES = mechanic_mode_multifarm.c \
																mechanic_mode_multifarm.h \
																mechanic_mode_multifarm_master.c \
																mechanic_mode_multifarm_slave.c
libmechanic_mode_multifarm_a_CFLAGS = -I. -I../../core
