pkglib_LTLIBRARIES = mpifarm_module_default.la
mpifarm_module_default_la_SOURCES = mpifarm_module_default.c mpifarm_module_default.h
mpifarm_module_default_la_LDFLAGS = -module -lhdf5
mpifarm_module_default_la_CPPFLAGS = -I../../readconfig/ -I../../ -rdynamic -g
mpifarm_module_default_laLDADD = ../../readconfig/libreadconfig.la
